--- a/public/less/components/module.less
+++ b/public/less/components/module.less
@@ -17,11 +17,19 @@
     box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3);
     border-bottom: 1px solid #D3DAE6;
     padding: 16px;
-    height: 112px;
+    height: 100px;
+}
+
+.wz-module-header .wz-module-header-title{    
+    margin: 6px 12px!important;
 }
 
 .wz-module-header-main{
-    height: 150px;
+    height: 145px;
+}
+
+.wz-module-header-main .wz-module-header-title{    
+    margin: 6px 12px 14px 12px!important;
 }
 
 .wz-module-header .euiTabs{
@@ -33,7 +41,7 @@
 }
 
 .wz-module-body {
-    margin-top: 112px;
+    margin-top: 100px;
 }
 
 .wz-module-body .globalQueryBar{
@@ -41,5 +49,5 @@
 }
 
 .wz-module-body-main {
-    margin-top: 165px;
+    margin-top: 155px;
 }
