Load discover and bridge to Dashboard

--- a/public/templates/agents/agents-fim.html
+++ b/public/templates/agents/agents-fim.html
@@ -1,9 +1,11 @@
 <div ng-if="tab === 'fim'">
     <div ng-if="agent && agent.os">
         <react-component name="MainFim" props="fimProps" />
-        <div ng-if='showModuleDashboard === "fim" || showModuleEvents === "fim"' class="wz-module-body">
-            <kbn-dis></kbn-dis>
-            <react-component ng-if='showModuleDashboard === "fim"' name="WzVisualize" props="visualizeProps" />
+        <div ng-if='!loadingDashboard'>
+            <div ng-if='showModuleDashboard === "fim" || showModuleEvents === "fim"' class="wz-module-body">
+                <kbn-dis></kbn-dis>
+                <react-component ng-if='showModuleDashboard === "fim"' name="WzVisualize" props="visualizeProps" />
+            </div>
         </div>
     </div>
     <div ng-if="!agent || !agent.os">
