Fix first time loading

--- a/public/less/components/module.less
+++ b/public/less/components/module.less
@@ -45,9 +45,13 @@
 }
 
 .wz-module-body .globalQueryBar{
-    padding: 16px 16px 0px 16px!important;
+    padding: 16px 16px 8px 16px!important;
 }
 
 .wz-module-body-main {
     margin-top: 155px;
+}
+
+discover-app-w .sidebar-container {
+    background-color: transparent!important;
 }
