--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1263,3 +1263,11 @@ md-chips.md-default-theme .md-chips, md-chips .md-chips{
 .hide-close-button{
   display: none;
 }
+
+.kbnAggTable .paginate-bottom {
+  margin-top: -40px;
+}
+
+.kbnGlobalBannerList{
+  display: none;
+}
