Redirect to agent page

--- a/public/less/components/module.less
+++ b/public/less/components/module.less
@@ -32,6 +32,10 @@
     margin: 6px 12px 14px 12px!important;
 }
 
+.wz-module-header-main .euiStat .euiTitle{    
+    height: 30px;
+}
+
 .wz-module-header .euiTabs{
     padding-top: 6px;
 }
