--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -4,9 +4,17 @@
 
 .flyout-body > .euiFlyoutBody__overflow{
     padding: 8px 16px 16px 16px;
+    mask-image: unset;
 }
 
+.details-row{
+    background: #fafbfd;
+    margin: -8px -16px 16px -16px;
+    padding: 16px;
+    border-bottom: 1px solid #d3dae6;
+}
 
 .detail-title{
     font-size: 16px;
+    font-weight: 500;
 }
