--- a/public/less/components/module.less
+++ b/public/less/components/module.less
@@ -14,7 +14,6 @@
 
 .wz-module-header {
     background:white;
-    box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3);
     border-bottom: 1px solid #D3DAE6;
     padding: 16px;
     height: 100px;
@@ -25,7 +24,7 @@
 }
 
 .wz-module-header-main{
-    height: 145px;
+    height: 50px;
 }
 
 .wz-module-header-main .wz-module-header-title{    
@@ -34,6 +33,18 @@
 
 .wz-module-header-main .euiStat .euiTitle{    
     height: 30px;
+}
+
+.wz-module-header h1{    
+    font-weight: 300;
+}
+
+.wz-module-header-main h1{    
+    font-weight: 400;
+}
+
+.wz-module-header h1 b{    
+    font-weight: 500;
 }
 
 .wz-module-header .euiTabs{
@@ -53,9 +64,27 @@
 }
 
 .wz-module-body-main {
-    margin-top: 155px;
+    margin-top: 50px;
+}
+
+.wz-module-body-agent-info{
+    padding: 20px;
+    border-bottom: 1px solid #d3dae6;
+    box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3), 0 1px 5px -2px rgba(152, 162, 179, 0.3);
+    margin-bottom: 16px;
+    background: white;
 }
 
 discover-app-w .sidebar-container {
     background-color: transparent!important;
+}
+
+@media only screen and (max-width: 767px){
+    .wz-module-header-wrapper{
+        padding-left: 0px;
+    }
+
+    .wz-module-body-agent-info > .euiFlexGroup > .euiFlexItem {
+        max-width: unset!important;
+    }
 }
