Fix styles for long text values

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -18,3 +18,10 @@
     font-size: 16px;
     font-weight: 500;
 }
+
+.detail-value{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 160px;
+    max-height: 80px;
+}
