Fixed margin between the filter and date pickers

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -25,3 +25,11 @@
     max-width: 160px;
     max-height: 80px;
 }
+
+.fim-search-bar, .fim-search-bar > div > div:nth-child(1) > div:nth-child(1) {
+    margin-right: 0px!important;
+}
+
+.fim-date-picker {
+    margin-left: 0px!important;
+}
