--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -5,13 +5,10 @@
     <div ng-show="!actrl.addingNewAgent">
         <div flex="auto" layout="column" ng-cloak ng-controller="overviewController as octrl">
             <!-- Navigation section -->
-            <div layout="row" ng-show="octrl.tab !== 'welcome'" layout-align="start center">
-                <!-- Breadcrumbs -->
-                <div layout="row" layout-padding>
-                    <!-- If you're not on the Welcome tab, show a functional breadcrumb -->
-                    <div ng-show="octrl.tab !== 'welcome'" style="padding-left: 5px">
-                        <react-component flex name="WzCurrentOverviewSectionWrapper" props="octrl.currentOverviewSectionProps" />
-                    </div>
+            <div layout="row" ng-show="octrl.tab !== 'welcome'" layout-align="start center" style="padding: 10px 0px 2px 4px">
+                <!-- If you're not on the Welcome tab, show a functional breadcrumb -->
+                <div ng-show="octrl.tab !== 'welcome'" style="padding-left: 5px">
+                    <react-component flex name="WzCurrentOverviewSectionWrapper" props="octrl.currentOverviewSectionProps" />
                 </div>
                 <!-- End breadcrumbs -->
 
