Add accordion for file details

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -9,9 +9,8 @@
 
 .details-row{
     background: #fafbfd;
-    margin: -8px -16px 16px -16px;
     padding: 16px;
-    border-bottom: 1px solid #d3dae6;
+    border-top: 1px solid #d3dae6;
 }
 
 .detail-title{
@@ -24,4 +23,26 @@
     overflow: hidden;
     max-width: 160px;
     max-height: 80px;
+}
+
+.euiAccordion {
+    margin: 0px -16px;
+    border-top: none;
+    border-bottom: 1px solid #d3dae6;
+}
+
+.euiAccordion__triggerWrapper{
+    padding: 0px 16px;
+}
+
+.euiAccordion__triggerWrapper .euiTitle {
+    font-size: 16px;
+}
+
+.euiAccordion__button {
+    padding: 0px 0px 8px 0;
+}
+
+.view-in-events-btn{
+    height: 30px;
 }
