Refactor file detail

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -1,5 +1,5 @@
 .flyout-header {
-    padding: 14px;
+    padding: 12px 16px;
 }
 
 .flyout-body > .euiFlyoutBody__overflow{
@@ -13,16 +13,10 @@
     border-top: 1px solid #d3dae6;
 }
 
-.detail-title{
-    font-size: 16px;
-    font-weight: 500;
-}
-
 .detail-value{
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 160px;
-    max-height: 80px;
+    max-height: 65px;
 }
 
 .euiAccordion {
@@ -37,6 +31,14 @@
 
 .euiAccordion__triggerWrapper .euiTitle {
     font-size: 16px;
+}
+
+.euiAccordion-isOpen .euiAccordion__childWrapper{
+    height: unset!important;
+}
+
+.euiAccordion__childWrapper .euiToolTipAnchor{
+    display: block!important;
 }
 
 .euiAccordion__button {
