--- a/public/templates/agents/agents-sca.html
+++ b/public/templates/agents/agents-sca.html
@@ -1,12 +1,8 @@
-<div ng-if="tab === 'sca' && tabView === 'panels'" class="margin-top-30">
-    <div class="md-margin"
-        ng-if="!load && (((agent || {}).status === 'Never connected') || !agent || !agent.os)">
-        <div flex class="euiCallOut euiCallOut--warning">
-            <div class="euiCallOutHeader">
-                <react-component name="EuiIcon" props="{type:'help',className:'euiCallOutHeader__title'}" />
-                <span class="euiCallOutHeader__title">This agent has never connected.</span>
-            </div>
+<div ng-if="tab === 'sca' && agent">
+    <react-component name="MainSca" props="{agent}" />
+    <div ng-if='!loadingDashboard'>
+        <div ng-if='showModuleEvents === "sca"' class="wz-module-body">
+            <kbn-dis></kbn-dis>
         </div>
     </div>
-    <react-component ng-if="scaProps" name="ScaDashboard" props="scaProps" />
 </div>
