Styles of file details

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -14,9 +14,8 @@
 }
 
 .detail-value{
-    text-overflow: ellipsis;
-    overflow: hidden;
-    max-height: 65px;
+    font-family: sans-serif;
+    padding-top: 4px;
 }
 
 .euiAccordion {
