Styles of file details

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -13,9 +13,21 @@
     border-top: 1px solid #d3dae6;
 }
 
+.detail-icon{
+    position: absolute;
+    margin-top: 12px;
+}
+
+.detail-title{
+    margin-left: 26px;
+    font-size: 13px;
+    font-weight: 300
+}
+
 .detail-value{
     font-family: sans-serif;
-    padding-top: 4px;
+    font-size: 15px;
+    padding-left: 26px;
 }
 
 .euiAccordion {
