--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -14,9 +14,15 @@
     background: white;
 }
 
+.wz-welcome-page-agent-info{
+    box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3), 0 1px 5px -2px rgba(152, 162, 179, 0.3);
+    margin-bottom: 28px;
+    background: white;
+}
+
 .wz-welcome-page-agent-info-details{
     background: #fafbfd;
-    padding: 16px 16px 0px 16px;
+    padding: 4px 16px 0px 16px;
     border-bottom: 1px solid #d3dae6;
 }
 
