--- a/public/templates/agents/dashboards.pug
+++ b/public/templates/agents/dashboards.pug
@@ -4,6 +4,6 @@ include ./agents-module.html
 include ./agents-pm.html
 include ./agents-mitre.html
 include ./agents-syscollector.html
-<react-component ng-if="tab === 'configuration' && agent" name="WzManagementConfiguration" props="{agent: agent, goGroups: goGroups, exportConfiguration: exportConfiguration}"/>
+<react-component class='wz-module-body-main' ng-if="tab === 'configuration' && agent" name="WzManagementConfiguration" props="{agent: agent, goGroups: goGroups, exportConfiguration: exportConfiguration}"/>
 include ./dashboards.html
 include ../footer.foot
