--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -8,26 +8,26 @@
 }
 
 .details-row{
-    background: #fafbfd;
+    background: #fcfdfe;
     padding: 16px;
     border-top: 1px solid #d3dae6;
 }
 
 .detail-icon{
     position: absolute;
-    margin-top: 12px;
+    margin-top: 6px;
 }
 
 .detail-title{
-    margin-left: 26px;
-    font-size: 13px;
-    font-weight: 300
+    margin-left: 36px;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .detail-value{
-    font-family: sans-serif;
-    font-size: 15px;
-    padding-left: 26px;
+    font-size: 14px;
+    padding-left: 36px;
+    font-weight: 300;
 }
 
 .euiAccordion {
