--- a/public/templates/agents/dashboards.html
+++ b/public/templates/agents/dashboards.html
@@ -1,4 +1,4 @@
-<div ng-show="tabView === 'panels'" ng-if="tab!== 'fim'" ng-class="{'no-opacity': resultState === 'none' || !rendered}"
+<!-- <div ng-show="tabView === 'panels'" ng-if="tab!== 'fim'" ng-class="{'no-opacity': resultState === 'none' || !rendered}"
     class="md-padding-v">
     <react-component name="WzVisualize" props="visualizeProps" />
-</div>
+</div> -->
