--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -28,6 +28,11 @@
     font-size: 14px;
     padding-left: 36px;
     font-weight: 300;
+    white-space: break-spaces;
+}
+
+.detail-value-checksum{
+    font-size: 13px!important;
 }
 
 .euiAccordion {
