Discover bar styles

--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -68,6 +68,10 @@
     padding: 16px 16px 8px 16px!important;
 }
 
+.wz-module-body .flyout-body .globalQueryBar{
+    padding: 0!important;
+}
+
 .wz-module-body-main {
     margin-top: 62px!important;
 }
