--- a/public/templates/agents/agents-syscollector.html
+++ b/public/templates/agents/agents-syscollector.html
@@ -1,4 +1,4 @@
-<div ng-if="tab === 'syscollector'" ng-show="!load" class="euiPageBody">
+<div ng-if="tab === 'syscollector'" ng-show="!load" class="euiPageBody wz-module-body-main">
 
   <div layout="row" class="wz-margin-16" ng-if="agent && agent.status === 'Never connected'">
     <div flex class="euiCallOut euiCallOut--warning">
