--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -12,12 +12,7 @@
     box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3), 0 1px 5px -2px rgba(152, 162, 179, 0.3);
     margin-bottom: 28px;
     background: white;
-}
-
-.wz-welcome-page-agent-info{
-    box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3), 0 1px 5px -2px rgba(152, 162, 179, 0.3);
-    margin-bottom: 28px;
-    background: white;
+    padding-top: 12px;
 }
 
 .wz-welcome-page-agent-info-details{
