--- a/public/templates/agents/agents-module.html
+++ b/public/templates/agents/agents-module.html
@@ -2,7 +2,10 @@
     <react-component name="MainModule" props="{agent, section: tab}" />
     <div ng-if='!loadingDashboard'>
         <div ng-if='showModuleDashboard || showModuleEvents' class="wz-module-body">
-            <div ng-class="{'no-opacity': !moduleDiscoverReady && !showModuleEvents}">
+            <div ng-if='showModuleEvents && !moduleDiscoverReady' style="margin: 0 auto; width: 32px">
+                <span class="euiLoadingSpinner euiLoadingSpinner--xLarge" style="margin-top: 24px"></span>
+            </div>
+            <div ng-class="{'no-opacity': !moduleDiscoverReady}">
                 <kbn-dis></kbn-dis>
             </div>
         </div>
@@ -40,9 +43,10 @@
         </div>
     </div>
     <!-- End report status section -->
-    <div ng-if="visualizeProps">
+    <div ng-if="tab && tab!=='welcome'">
         <div ng-class="{'no-opacity': !moduleDiscoverReady}">
-            <react-component ng-show='showModuleDashboard' name="WzVisualize" props="visualizeProps" />
+            <react-component ng-show='showModuleDashboard' name="WzVisualize"
+                props="{selectedTab: tab, isAgent: true}" />
         </div>
     </div>
 </div>
