--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -5,10 +5,12 @@
     <div ng-show="!actrl.addingNewAgent">
         <div flex="auto" layout="column" ng-cloak ng-controller="overviewController as octrl">
             <!-- Navigation section -->
-            <div layout="row" ng-show="octrl.tab !== 'welcome'" layout-align="start center" style="padding: 10px 0px 2px 4px">
+            <div layout="row" ng-show="octrl.tab !== 'welcome'" layout-align="start center"
+                style="padding: 10px 0px 2px 4px">
                 <!-- If you're not on the Welcome tab, show a functional breadcrumb -->
                 <div ng-show="octrl.tab !== 'welcome'" style="padding-left: 5px">
-                    <react-component flex name="WzCurrentOverviewSectionWrapper" props="octrl.currentOverviewSectionProps" />
+                    <react-component flex name="WzCurrentOverviewSectionWrapper"
+                        props="octrl.currentOverviewSectionProps" />
                 </div>
                 <!-- End breadcrumbs -->
 
@@ -113,6 +115,7 @@
             </div>
             <!-- No results section -->
 
-            <div ng-class="{'no-opacity': resultState === 'none' || !rendered}" ng-show="octrl.tabView === 'panels'">
-                <react-component name="WzVisualize" props="octrl.visualizeProps" />
+            <div ng-class="{'no-opacity': resultState === 'none' || !rendered}" ng-show="octrl.tabView === 'panels'"
+                ng-if="octrl.overviewModuleReady">
+                <react-component name="WzVisualize" props="{selectedTab: octrl.tab}" />
             </div>
