--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -1,7 +1,5 @@
 .wz-module {
-    top: 0;
-    position: absolute;
-    width: 100%;
+    display: contents;
 }
 
 .wz-module-header-agent-wrapper, .wz-module-header-nav-wrapper{
@@ -61,7 +59,7 @@
 }
 
 .wz-module-body {
-    margin-top: 100px;
+    padding-top: 100px;
 }
 
 .wz-module-body .globalQueryBar{
@@ -73,7 +71,7 @@
 }
 
 .wz-module-body-main {
-    margin-top: 50px!important;
+    padding-top: 50px!important;
 }
 
 discover-app-w .sidebar-container {
