--- a/public/components/common/modules/discover/discover.less
+++ b/public/components/common/modules/discover/discover.less
@@ -1,3 +1,30 @@
 div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
     z-index: 10000;
 }
+
+.module-discover-table .euiTableRow.euiTableRow-isExpandedRow .euiTableRowCell {
+    background: white;
+}
+
+.module-discover-table .euiTableRow-isExpandedRow .euiTableCellContent{
+    background: white;
+    margin-top: -1px;
+    display: inline-block;
+    padding: 8px 0px 8px 32px;
+    width: 100%;
+}
+
+.module-discover-table-description-list .euiDescriptionList__title, 
+.module-discover-table-description-list .euiDescriptionList__description{
+    margin-top: 8px;
+}
+
+.module-discover-table-description-list .euiDescriptionList__title{
+    margin-top: 8px!important;
+    font-weight: 500!important;
+    width: 25%!important;
+}
+
+.module-discover-table-description-list .euiDescriptionList__description{
+    width: 75%!important;
+}
