--- a/public/components/common/modules/discover/discover.less
+++ b/public/components/common/modules/discover/discover.less
@@ -16,7 +16,7 @@ div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
 
 .module-discover-table-description-list .euiDescriptionList__title, 
 .module-discover-table-description-list .euiDescriptionList__description{
-    margin-top: 8px;
+    margin-top: 7px!important;
 }
 
 .module-discover-table-description-list .euiDescriptionList__title{
