--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -35,6 +35,17 @@
     font-size: 13px!important;
 }
 
+.detail-value-perm{
+    word-break: break-word;
+    max-height: 40px !important;
+    display: inline-block;
+    overflow: hidden;
+}
+
+.detail-tooltip {
+    float: left;
+}
+
 .euiAccordion {
     margin: 0px -16px;
     border-top: none;
