Hide the filter button

--- a/public/components/common/modules/discover/discover.less
+++ b/public/components/common/modules/discover/discover.less
@@ -28,3 +28,7 @@ div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
 .module-discover-table-description-list .euiDescriptionList__description{
     width: 78%!important;
 }
+
+.wz-discover.hide-filter-controll .globalFilterGroup__branch {
+    display: none;
+}
