Add tooltip to quick filters

--- a/public/components/agents/fim/states/states.less
+++ b/public/components/agents/fim/states/states.less
@@ -26,7 +26,6 @@
 
 .detail-value{
     font-size: 14px;
-    padding-left: 36px;
     font-weight: 300;
     white-space: break-spaces;
 }
@@ -43,6 +42,7 @@
 }
 
 .detail-tooltip {
+    margin-left: 36px;
     float: left;
 }
 
