--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -62,12 +62,8 @@
     padding-top: 100px;
 }
 
-.wz-module-body .globalQueryBar{
-    padding: 16px 16px 8px 16px!important;
-}
-
-.wz-module-body .flyout-body .globalQueryBar{
-    padding: 0!important;
+.flyout-body .globalQueryBar{
+    padding: 2px 0px 8px 0px!important;
 }
 
 .wz-module-body-main {
