--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -24,3 +24,7 @@
 .wz-welcome-page-agent-info-actions{
     padding: 12px 16px 0px 16px;
 }
+
+.statWithLink:hover .euiTitle {
+    text-decoration: underline;
+}
