Fix blank visualizations

--- a/public/templates/agents/agents-module.html
+++ b/public/templates/agents/agents-module.html
@@ -50,7 +50,7 @@
     </div>
 
     <!-- End report status section -->
-    <div ng-if="tab && tab!=='welcome' && resultState !== 'none'">
+    <div ng-if="tab && tab!=='welcome'" ng-show="resultState !== 'none'">
         <div ng-class="{'no-opacity': !moduleDiscoverReady}">
             <react-component ng-show='showModuleDashboard' name="WzVisualize"
                 props="{selectedTab: tab, isAgent: true}" />
