Redesign custom discover

--- a/public/components/common/modules/discover/discover.less
+++ b/public/components/common/modules/discover/discover.less
@@ -32,3 +32,7 @@ div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
 .wz-discover.hide-filter-controll .globalFilterGroup__branch {
     display: none;
 }
+
+.hover-row{
+    background-color: #f8f8f8;
+}
