Add all fields filterable

--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -27,11 +27,19 @@
 .detail-value{
     font-size: 14px;
     font-weight: 300;
+    cursor: pointer;
+    margin-left: 36px;
+    float: left;
     white-space: break-spaces;
+}
+
+.buttonAddFilter{
+    min-height: 0;
 }
 
 .detail-value-checksum{
     font-size: 13px!important;
+    display: inline-flex;
 }
 
 .detail-value-perm{
@@ -44,6 +52,10 @@
 .detail-tooltip {
     margin-left: 36px;
     float: left;
+}
+
+.detail-tooltip2 {
+    float: right;
 }
 
 .euiAccordion {
