--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -7,10 +7,13 @@
     mask-image: unset;
 }
 
-.details-row{
-    background: #fff;
+.flyout-row{
     padding: 16px;
     border-top: 1px solid #d3dae6;
+}
+
+.details-row{
+    background: #fcfdfe;
 }
 
 .detail-icon{
@@ -82,6 +85,10 @@
 
 .euiAccordion__button {
     padding: 0px 0px 8px 0;
+}
+
+.events-accordion{
+    border-bottom: none!important;
 }
 
 .view-in-events-btn{
