--- a/public/components/common/modules/discover/discover.less
+++ b/public/components/common/modules/discover/discover.less
@@ -6,12 +6,17 @@ div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
     background: white;
 }
 
-.module-discover-table .euiTableRow-isExpandedRow .euiTableCellContent{
+.module-discover-table .euiTable {
+    margin-top: 16px;
+}
+
+.module-discover-table > .euiTable .euiTableRow-isExpandedRow .euiTableCellContent{
     background: white;
     margin-top: -1px;
     display: inline-block;
     padding: 8px 0px 8px 32px;
     width: 100%;
+    font-family: monospace;
 }
 
 .module-discover-table-description-list .euiDescriptionList__title, 
@@ -34,5 +39,5 @@ div.euiPanel.euiComboBoxOptionsList.euiComboBoxOptionsList {
 }
 
 .hover-row{
-    background-color: #f8f8f8;
+    background-color: #fbfcfd;
 }
