Change module inside agent module

--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -38,6 +38,14 @@
     margin: 6px 12px!important;
 }
 
+.wz-module-header-agent-title-btn{
+    cursor: pointer;
+}
+
+.wz-module-header-agent-title-btn:hover h1{
+    color: #006BB4;
+}
+
 .wz-module-header-agent h1{    
     font-weight: 300;
 }
