Agent info in module

--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -15,7 +15,7 @@
     padding-top: 12px;
 }
 
-.wz-welcome-page-agent-info-details{
+.wz-welcome-page-agent-info .wz-welcome-page-agent-info-details{
     background: #fafbfd;
     padding: 4px 16px 0px 16px;
     border-bottom: 1px solid #d3dae6;
