Fix details values

--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -30,7 +30,7 @@
 .detail-value{
     font-size: 14px;
     font-weight: 300;
-    cursor: pointer;
+    cursor: default;
     margin-left: 36px;
     float: left;
     white-space: break-spaces;
