--- a/public/components/common/globalBreadcrumb/globalBreadcrumb.less
+++ b/public/components/common/globalBreadcrumb/globalBreadcrumb.less
@@ -4,9 +4,9 @@
     padding: 5px 0px 0px 5px;
 }
 
-.euiBreadcrumbs--truncate .wz-global-breadcrumb .euiBreadcrumb:not(.euiBreadcrumb--collapsed){
-    max-width: initial!important;
-    overflow: initial!important;
+.wz-global-breadcrumb-btn{
+    max-width: unset!important;
+    height: 20px;
 }
 
 .wz-global-breadcrumb-btn{
