--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -13,7 +13,7 @@
 .wz-module-header-agent, .wz-module-header-nav{
     border-bottom: 1px solid #D3DAE6;
     background:white;
-    padding: 14px 16px;
+    padding: 16px;
 }
 
 .wz-module-header-agent{
