--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -9,15 +9,22 @@
 }
 
 .wz-welcome-page-agent-info{
-    box-shadow: 0 2px 2px -1px rgba(152, 162, 179, 0.3), 0 1px 5px -2px rgba(152, 162, 179, 0.3);
-    margin-bottom: 28px;
+    margin: 0 -16px 25px -16px;
     background: white;
     padding-top: 12px;
 }
 
+.wz-welcome-page-agent-tabs{
+    margin: -16px;
+    padding: 12px 16px 16px 16px;
+    top: -2px;
+    position: relative;
+}
+
 .wz-welcome-page-agent-info .wz-welcome-page-agent-info-details{
     background: #fafbfd;
-    padding: 4px 16px 0px 16px;
+    margin: -23px 0;
+    padding: 0;
     border-bottom: 1px solid #d3dae6;
 }
 
