--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -94,3 +94,10 @@
 .view-in-events-btn{
     height: 30px;
 }
+
+/* This resets to the original value of "display" style for EuiTooltip used in ".euiAccordion__childWrapper .euiToolTipAnchor" definition,
+    which is defined above in this same file as block!important.
+*/
+.rule_reset_display_anchor .euiToolTipAnchor{
+    display: inline-block !important;
+}
