--- a/public/templates/visualize/overview-mitre.html
+++ b/public/templates/visualize/overview-mitre.html
@@ -1,3 +1,5 @@
+<!-- TODO: Delete this  -->
+
 <div ng-if="octrl.tab === 'mitre' && octrl.tabView === 'panels'">
     <!-- Mitre cards slider-->
     <div ng-show="!octrl.showingMitreTable && resultState !== 'none' && resultState !== 'loading'" ng-if="mitreIds">
