--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1375,3 +1375,12 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
 .kbnDis-no-padding .globalQueryBar:not(:empty) {
   padding: 0px 0px 16px 0px!important;
 }
+
+.euiCodeBlock.euiCodeBlock-isFullScreen{
+  border: 1px solid #D3DAE6;
+  border-radius: 4px;
+}
+
+.euiCodeBlock.euiCodeBlock-isFullScreen .euiCodeBlock__controls{
+  padding-right: 16px;
+}
