Create tactics object from API

--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -46,6 +46,7 @@
                 <!-- End Discover/Dashboard buttons section -->
             </div>
             <!-- End navigation section -->
+            <react-component name="Mitre"/>
 
             <!-- Discover search bar section -->
             <kbn-dis ng-show="octrl.tab && octrl.tab !== 'welcome'"></kbn-dis>
