Adapt some colors

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1379,6 +1379,7 @@ div.euiPopover__panel.euiPopover__panel-isOpen.euiPopover__panel--bottom {
 .euiCodeBlock.euiCodeBlock-isFullScreen{
   border: 1px solid #D3DAE6;
   border-radius: 4px;
+  margin: 22px;
 }
 
 .euiCodeBlock.euiCodeBlock-isFullScreen .euiCodeBlock__controls{
