--- a/public/components/wz-menu/wz-menu.less
+++ b/public/components/wz-menu/wz-menu.less
@@ -186,10 +186,10 @@ wz-menu {
 
 /* Style to mark active or when-hover buttons on the toolbar */
 .wz-menu-button.wz-menu-active{
-    background-color: #f2f2f2 !important;
+    background-color: #e7eaf1!important;
 }
 .wz-menu-button:not([disabled]):hover {
-    background-color: #f2f2f2;
+    background-color: #e7eaf1;
     text-decoration: none;
 }
 
