Hide mitre component in events

--- a/public/templates/agents/agents-module.html
+++ b/public/templates/agents/agents-module.html
@@ -11,10 +11,10 @@
         </div>
     </div>
 
-    <div ng-if="tab === 'mitre'">
+    <div ng-if="tab === 'mitre' && showModuleDashboard  && !showModuleEvents">
         <react-component name="Mitre" />
     </div>
-    
+
     <!-- Loading status section -->
     <div ng-if="tabView === 'panels' && showModuleDashboard && !rendered && resultState !== 'none'"
         class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive">
