Fix technique flyout styles

--- a/public/less/common.less
+++ b/public/less/common.less
@@ -1253,6 +1253,14 @@ md-chips.md-default-theme .md-chips, md-chips .md-chips{
   margin-top: 5px;
 }
 
+.wz-markdown-margin > ul {
+  list-style: disc;
+}
+
+.wz-markdown-margin > ul > li {
+  margin-left: 25px;
+}
+
 .AgentsTable__soBadge{
   font-size: 18px!important;
   padding-right: 3px;
