--- a/public/templates/visualize/dashboards.html
+++ b/public/templates/visualize/dashboards.html
@@ -88,13 +88,6 @@
             </div>
             <!-- End report status section -->
 
-            <!-- No results section -->
-            <div layout="row" class="wz-margin-top-10 wz-margin-right-8 wz-margin-left-8"
-                ng-if="octrl.tab !== 'welcome'" ng-show="resultState === 'none' && octrl.tabView === 'panels'">
-                <react-component flex name="EuiCallOut" props="{color:'warning',iconType:'help', title:'There are no results for selected time range. Try another
-                    one.'}" />
-            </div>
-
             <div ng-if="actrl.hasAgents === false"
                 class="wz-margin-top-10 wz-margin-right-8 wz-margin-left-8 euiCallOut euiCallOut--warning">
                 <div class="euiCallOutHeader">
@@ -118,7 +111,7 @@
             </div>
             <!-- No results section -->
 
-            <div ng-class="{'no-opacity': resultState === 'none' || !rendered}" ng-show="octrl.tabView === 'panels'"
+            <div ng-class="{'no-opacity': !rendered}" ng-show="octrl.tabView === 'panels'"
                 ng-if="octrl.overviewModuleReady">
-                <react-component name="WzVisualize" props="{selectedTab: octrl.tab}" />
+                <react-component name="WzVisualize" props="{selectedTab: octrl.tab, resultState}" />
             </div>
