Rules info redesign

--- a/public/components/agents/fim/inventory/inventory.less
+++ b/public/components/agents/fim/inventory/inventory.less
@@ -73,7 +73,7 @@
     height: unset!important;
 }
 
-.euiAccordion__childWrapper .euiToolTipAnchor{
+.euiAccordion__childWrapper .flyout-row:not(.related-rules-row) .euiToolTipAnchor{
     display: block!important;
 }
 
