Redesign agent info

--- a/public/components/common/welcome/welcome.less
+++ b/public/components/common/welcome/welcome.less
@@ -9,27 +9,28 @@
 }
 
 .wz-welcome-page-agent-info{
-    margin: 0 -16px 25px -16px;
     background: white;
-    padding-top: 12px;
+    padding: 6px 16px 8px 16px;
+}
+
+.wz-welcome-page-agent-info.wz-welcome-page-agent-info-gray{
+    border-top: 1px solid #d3dae6;
+    background: #fafbfd!important;
+    border-bottom: 1px solid #d3dae6;
 }
 
 .wz-welcome-page-agent-tabs{
-    margin: -16px;
-    padding: 12px 16px 16px 16px;
-    top: -2px;
-    position: relative;
-}
-
-.wz-welcome-page-agent-info .wz-welcome-page-agent-info-details{
-    background: #fafbfd;
-    margin: -23px 0;
-    padding: 0;
-    border-bottom: 1px solid #d3dae6;
+    padding: 12px 16px 1px 16px;
+    min-height: 54px;
 }
 
 .wz-welcome-page-agent-info-actions{
     padding: 6px 0px 6px 0px;
+}
+
+.wz-welcome-page-agent-info .euiStat .euiText{
+    font-size: 12px;
+    font-family: sans-serif;
 }
 
 .statWithLink:hover .euiTitle {
