--- a/public/components/common/modules/module.less
+++ b/public/components/common/modules/module.less
@@ -11,18 +11,20 @@
 }
 
 .wz-module-header-agent, .wz-module-header-nav{
-    border-bottom: 1px solid #D3DAE6;
     background:white;
-    padding: 16px;
 }
 
 .wz-module-header-agent{
     height: 50px;
+    padding: 16px;
+}
+
+.wz-module-header-agent .euiHealth svg{
+    width: 24px;
+    height: 24px;
 }
 
 .wz-module-header-nav{
-    margin-top: 11px;
-    padding: 0px 16px;
     min-height: 55px;
 }
 
@@ -42,12 +44,12 @@
     cursor: pointer;
 }
 
-.wz-module-header-agent-title-btn:hover h1{
+.wz-module-header-agent-title-btn h1 > span:hover{
     color: #006BB4;
 }
 
 .wz-module-header-agent h1{    
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .wz-module-header-agent h1 b{    
@@ -55,7 +57,8 @@
 }
 
 .wz-module-header-nav-wrapper{
-    margin-top: 50px;
+    margin-top: 49px;
+    border-bottom: 1px solid #d3dae6;
 }
 
 .wz-module-header-nav .euiTabs{
@@ -68,7 +71,15 @@
 }
 
 .wz-module-body {
-    padding-top: 170px;
+    padding-top: 105px;
+}
+
+.wz-module.wz-module-welcome .wz-module-body{
+    padding-top: 120px !important;
+}
+
+.wz-module.wz-module-showing-agent .wz-module-body{
+    padding-top: 160px !important;
 }
 
 .flyout-body .globalQueryBar{
@@ -78,6 +89,11 @@
 .wz-module-body-main {
     padding-top: 50px!important;
 }
+
+.wz-module-body-main-double {
+    padding-top: 102px!important;
+}
+
 
 discover-app-w .sidebar-container {
     background-color: transparent!important;
